k3s-files/ecom.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      run: my-app
  template:
    metadata:
      labels:
        run: my-app
    spec:
      containers:
        - name: my-container
          image: saurabhmate/my-shoes-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
# --- Service ---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: my-app
spec:
  type: ClusterIP
  selector:
    run: my-app
  ports:
  - port: 80  
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: my-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: my-app-my-app-redirect-https@kubernetescrd
spec:
  rules:
    - host: ecom.saurabhmate.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app-service
                port:
                  number: 80

  tls:
    - hosts:
        - ecom.saurabhmate.cloud
      secretName: my-app-tls
