k3s-files/simple-http.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplehttp-deployment
  namespace: simple-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simplehttp
  template:
    metadata:
      labels:
        app: simplehttp
    spec:
      containers:
        - name: simplehttp
          image: pareshpawar/simple-http-server:latest
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: simplehttp-service
  namespace: simple-http
spec:
  type: ClusterIP
  selector:
    app: simplehttp
  ports:
    - port: 8009
      targetPort: 8081

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplehttp-ingress
  namespace: simple-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: traefik
  rules:
    - host: simple-http.saurabhmate.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simplehttp-service
                port:
                  number: 8009
  tls:  # This 'tls' block should be at the same indentation level as 'rules'
    - hosts:
      - simple-http.saurabhmate.cloud
      secretName: simple-http-cert
